--- a/HelloWorld/app/src/main/AndroidManifest.xml
+++ b/HelloWorld/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity2"></activity>
+        <activity android:name=".Activity3"></activity>
+        <activity android:name=".Activity2" />
         <activity android:name=".HelloWorldActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
