--- a/HelloWorld/app/src/main/AndroidManifest.xml
+++ b/HelloWorld/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Activity3"></activity>
         <activity android:name=".Activity2" />
-        <activity android:name=".HelloWorldActivity">
+        <activity android:name=".HelloWorldActivity"
+                  android:launchMode="standard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
