--- a/HelloWorld/app/src/main/AndroidManifest.xml
+++ b/HelloWorld/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         <activity android:name=".Activity3"></activity>
         <activity android:name=".Activity2" />
         <activity android:name=".HelloWorldActivity"
-                  android:launchMode="singleTop">
+                  android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
