--- a/HelloWorld/app/src/main/AndroidManifest.xml
+++ b/HelloWorld/app/src/main/AndroidManifest.xml
@@ -8,13 +8,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity3"></activity>
-        <activity android:name=".Activity2" />
+        <activity android:name=".Activity3">
+
+        </activity>
+        <activity android:name=".Activity2">
+            <intent-filter>
+                <action android:name="com.example.activitytest.ACTION_START" ></action>
+                <category android:name="android.intent.category.DEFAULT"></category>
+                <category android:name="com.example.activitytest.MY_CATEGORY"></category>
+            </intent-filter>
+        </activity>
         <activity android:name=".HelloWorldActivity"
                   android:launchMode="singleInstance">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
